# retirement-calculator

./: .env.example  .gitattributes  .gitignore  .tmp-print-verification.test.ts  AGENTS.md  BACKLOG.md  CALIBRATION_WORKPLAN.md  DIE_WITH_ZERO_WORKPLAN.md  FLIGHT_PATH_WORKPLAN.md  MINER_REFACTOR_WORKPLAN.md  README.md  VALIDATION_WORKPLAN.md  build-notes.md  index.html  monthly-review-ai-requests.txt  network-all.txt  package-lock.json  package.json  product-spec.md  recent-review-network.txt  seed-data.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
.playwright-mcp/: page-2026-05-13T14-46-21-871Z.yml  page-2026-05-13T20-26-25-200Z.yml  page-2026-05-13T23-40-45-823Z.yml  page-2026-05-13T23-43-06-437Z.yml  page-2026-05-13T23-44-05-642Z.yml  page-2026-05-14T00-15-06-942Z.yml  page-2026-05-14T00-15-14-529Z.yml  page-2026-05-14T00-17-08-297Z.yml  page-2026-05-14T00-18-49-895Z.yml  page-2026-05-14T00-18-56-017Z.yml  page-2026-05-14T00-49-30-688Z.yml  page-2026-05-16T03-12-48-569Z.yml  page-2026-05-16T03-19-56-089Z.yml  page-2026-05-16T03-55-56-131Z.yml
artifacts/: model-verification-quick-report.json  model-verification-report.json
cluster/: README.md  build-info.ts  certify-worker-loader.mjs  certify-worker.ts  corpus-reader.ts  corpus-writer.ts  dispatcher.ts  engine-runtime.ts  host-smoke.ts  host-worker-loader.mjs  host-worker.ts  host.ts  monthly-review-ai-review.ts  north-star-ai-review.ts  rust-engine-client.ts  rust-engine-native-client.ts  smoke-client.ts  start-session.ts  tsconfig.json  work-queue.ts
deploy/: com.robbonner.portfolio-quotes-refresh.plist  com.robbonner.six-pack-api.plist  com.robbonner.spending-mail-sync.plist
docs/: audit-remediation-verification.md  audit-remediation-workplan.md  change-grouping-2026-05-07.md  cpu-optimization-baseline.md  decision-grade-audit.md  decision-grade-implementation-plan.md  engine-compare-loop.md  flight-path-threshold-calibration.md  gpu-backend-poc-results.md  home-assistant-api.md  jpmorgan-spending-models-workplan.md  model-testing-audit-plan.md  monthly-sleep-at-night-review-workplan.md  paycheck-magi-guardrail-workplan.md  phase-action-playbook-workplan.md  probe-list-workplan.md  property-invariants.md  protected-reserve-model.md  rust-promotion-audit.md  spending-autopilot.md  tax-engine-assumptions.md  testing.md  working-set-commit-plan.md
fixtures/: boldin_lower_returns.README.md  boldin_lower_returns.json  cfiresim_400k_20k_30yr_60_40_export.json  external_model_benchmarks.README.md  (+9 more)
flight-engine-rs/: .gitignore  Cargo.toml  README.md  build.rs
flight-engine-rs/prebuilt/darwin-arm64/: flight_engine_napi.node
flight-engine-rs/src/: candidate_engine.rs  lib.rs  node_napi.rs  tax.rs  trial.rs  types.rs
flight-engine-rs/tests/: compact_summary_tape.rs
(+543 files in other folders)
